# llaisys

./: .clang-tidy  .gitignore  CHEATSHEET.md  DOCUMENTS.md  README.md  vcpkg.json  xmake.lua
.github/workflows/: build.yaml
include/llaisys/: ops.h
include/llaisys/models/: qwen2.h
python/llaisys/: ops.py
python/llaisys/libllaisys/: __init__.py  ops.py  qwen2.py  tensor.py
python/llaisys/models/: qwen2.py
services/infer/: README.md  pyproject.toml
services/infer/infer/: __init__.py  config.py  main.py
services/infer/infer/api/: chat.py
services/infer/infer/engine/: __init__.py  inference.py  kv_cache_pool.py  pool.py  request.py  scheduler.py
services/infer/infer/schemas/: __init__.py  chat.py
src/: utils.hpp
src/core/allocator/: caching_allocator.cpp  caching_allocator.hpp
src/core/runtime/: runtime.cpp
src/cuda_utils/: check.cu  check.cuh  types.cu  types.cuh
src/device/cpu/: cpu_runtime_api.cpp
src/device/nvidia/: nvidia_runtime_api.cu
src/llaisys/: ops.cc
src/llaisys/models/: qwen2.cc
src/ops/add/: op.cpp
src/ops/argmax/: op.cpp
src/ops/embedding/: op.cpp
src/ops/linear/: op.cpp
src/tensor/: tensor.cpp
src/utils/: check.hpp  debugger.cpp  debugger.hpp  omp_compat.hpp  profiler.cpp  profiler.hpp
test/: test_infer.py  test_infer_service.py  test_kv_cache.py  test_runtime.py
test/cuda/: test_argmax_cuda.cu  test_cuda.cu
test/ops/: argmax.py  sample.py
ui/portal/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
xmake/: cpu.lua  infer.lua  nvidia.lua  portal.lua  pylib.lua  test_cuda.lua
(+62 files in other folders)
