[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llaisys-infer"
version = "0.1.0"
description = "OpenAI-compatible chat-completion inference service for llaisys"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "transformers",
    # llaisys is installed from the local ../python package (editable)
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
llaisys-infer = "infer.main:cli"

[tool.setuptools.packages.find]
include = ["infer*"]
